refactor: fix some review comments 3